# WebGL-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  helper.js  index.html  library.js  pre.js  style.css
assets/basic_shader/: fragment.fs  vertex.vs
assets/shaders/basic/: vertex.vs
assets/shaders/basic_square/: vertex.vs
assets/shaders/basic_triangle/: fragment.fs
assets/shaders/rotating_triangle/: fragment.fs  vertex.vs
assets/shaders/shiny_triangle/: fragment.fs
assets/shaders/texture_square/: fragment.fs  vertex.vs
assets/texture_shader/: fragment.fs  vertex.vs
src/: Test.cpp  main.cpp  opengl.cpp  opengl.h
src/Person/: Person.cpp  Person.h
src/opengl/: opengl.cpp  opengl.h  shader.cpp  shader.h
src/opengl/animated_square/: animated_square.cpp  animated_square.h
src/opengl/basic_square/: basic_square.cpp  basic_square.h
src/opengl/basic_triangle/: basic_triangle.cpp  basic_triangle.h
src/opengl/example/: example.cpp  example.h
src/opengl/hello_square/: hello_square.cpp  hello_square.h
src/opengl/rotating_triangle/: rotating_triangle.cpp  rotating_triangle.h
src/opengl/shiny_triangle/: shiny_triangle.cpp  shiny_triangle.h
src/opengl/texture_square/: texture_square.cpp  texture_square.h
src/opengl/texture_triangle/: texture_triangle.cpp  texture_triangle.h
